# ternary-matrix-multiplication

./: Cargo.toml  README.md
benches/: dots.rs  muls.rs
src/: constants.rs  dots.rs  lib.rs  test_util.rs
src/muls/: mm1.rs  mm10.rs  mm2.rs  mm3.rs  mm4.rs  mm5.rs  mm6.rs  mm7.rs  mm7a.rs  mm8.rs  mm9.rs  mod.rs
