[package]
name = "matmul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
paste = "1.0.14"
rand = "0.8.5"
blas = "0.20"
blis-src = "0.2.2"
itertools = "0.13.0"
# accelerate-src = "0.3.2"
